--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "All Articles", articles_path %></li>
           <li><%= link_to "My Interests", articles_interests_path %></li>
-          <li><%= link_to "Update Articles", articles_scrape_path %></li>
+          <li><%= link_to "Scrape Articles", admin_scrape_path %></li>
         </ul>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
