Change back 'feed' to 'source'

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
     <br>
     <small>Tags: <%= @article.tag_list %></small>
     <br>
-    <small>Source: <%= @article.feed.name %></small>
+    <small>Source: <%= @article.source.name %></small>
   </div>
   <% if @article.author %>
     <div class="panel-footer">By <%= @article.author %></div>
