Username is readonly

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :username %><br>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, :readonly => true %>
   </div>
   <div class="field">
     <%= f.label :password %><br>
