Save author as nil if its an empty string

--- a/app/views/articles/_index_article.html.erb
+++ b/app/views/articles/_index_article.html.erb
@@ -2,9 +2,17 @@
   <div class="panel-body">
     <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
     <p><%= article.summary %></p>
-    <%= link_to 'Read More', article.url, class: "btn btn-default" %>
+    <br>
+    <small>Published On: <%= article.pub_date.strftime("%e %b %Y")%></small>
+    <br>
     <div class="btn-group pull-right" role="group">
         <%= link_to 'Details', article, class: "btn btn-default" %>
     </div>
+    <div class="text-center">
+      <%= link_to 'Read More', article.url, class: "btn btn-default" %>
+    </div>
   </div>
+  <% unless article.author.nil? %>
+    <div class="panel-footer text-right">By <%= article.author %></div>
+  <% end %>
 </div>
